--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,8 @@
-appdirs==1.4.3
-atomicwrites==1.3.0
-attrs==19.1.0
-backcall==0.1.0
-black==19.3b0
-bleach==3.1.4
-certifi==2019.6.16
-chardet==3.0.4
-Click==7.0
-coverage==4.5.3
-cycler==0.10.0
-decorator==4.4.0
-defusedxml==0.6.0
-docutils==0.14
-entrypoints==0.3
-idna==2.8
-importlib-metadata==0.18
-ipykernel==5.1.1
-ipython==7.6.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.0
-jedi==0.14.0
-Jinja2==2.10.1
-joblib==0.13.2
-json5==0.8.5
-jsonschema==3.0.1
-jupyter==1.0.0
-jupyter-client==5.3.0
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-jupyterlab==1.0.1
-jupyterlab-server==1.0.0
-kiwisolver==1.1.0
-MarkupSafe==1.1.1
-matplotlib==3.1.1
-mistune==0.8.4
-monty==2.0.4
-more-itertools==7.1.0
-mpmath==1.1.0
-nbconvert==5.5.0
-nbformat==4.4.0
-networkx==2.3
-notebook==5.7.8
-numpy==1.16.4
-packaging==19.0
-palettable==3.1.1
-pandas==0.24.2
-pandocfilters==1.4.2
-parso==0.5.0
-pexpect==4.7.0
-pickleshare==0.7.5
-pkginfo==1.5.0.1
-pluggy==0.12.0
-prometheus-client==0.7.1
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
-py==1.8.0
-PyDispatcher==2.0.5
-Pygments==2.4.2
-pyparsing==2.4.0
-pyrsistent==0.15.3
-pytest==5.0.1
-python-coveralls==2.9.2
-python-dateutil==2.8.0
-pytz==2019.1
-PyYAML==5.1.1
-pyzmq==18.0.2
-qtconsole==4.5.1
-readme-renderer==24.0
-requests==2.22.0
-requests-toolbelt==0.9.1
-ruamel.yaml==0.15.97
-scikit-learn==0.21.2
-scipy==1.3.0
-seaborn==0.9.0
-Send2Trash==1.5.0
-six==1.12.0
-sklearn==0.0
-spglib==1.13.0.post6
-sympy==1.4
-tabulate==0.8.3
-terminado==0.8.2
-testpath==0.4.2
-toml==0.10.0
-tornado==6.0.3
-tqdm==4.32.2
-traitlets==4.3.2
-twine==1.13.0
-urllib3==1.25.3
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.5.0
-xlrd==1.2.0
-zipp==0.5.2
+matplotlib>=3.1.1
+monty>=2.0.4
+numpy>=1.16.4
+pandas>=0.24.2
+scikit-learn>=0.21.2
+scipy>=1.3.0
+seaborn>=0.9.0
+sphinx==2.4.3
