--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 matplotlib>=3.1.1
 monty>=2.0.4
-numpy>=1.16.4
-pandas>=0.24.2, <=0.25.3
+numpy>=1.16.4, <=1.17.2
+pandas==0.24.2
 scikit-learn>=0.21.2
 scipy>=1.3.0
 seaborn>=0.9.0
