--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 matplotlib>=3.1.1
 monty>=2.0.4
-numpy>=1.16.4, <=1.17.2
-pandas==0.24.2
-scikit-learn>=0.21.2
+numpy==1.19.4
+pandas==1.1.4
+scikit-learn==0.23.2
 scipy>=1.3.0
 seaborn>=0.9.0
+matminer==0.6.3
+pymatgen==2020.11.11
